--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  cached_network_image: ^3.4.1
+  cached_network_image: ^3.3.0
+  shared_preferences: ^2.2.2
+  sqflite: ^2.4.2
+  encrypt: ^5.0.3
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
